# roprw

./: .gitignore  CMakeLists.txt  README.md
include/: globals.hpp
include/driver/: arbitrary_call.hpp  kernel_addresses.hpp  primitives.hpp
include/rop_thread/: definitions.hpp  memory_manager.hpp  rop_thread.hpp  stack_manager.hpp
include/stack/: stack_manager.hpp
include/utils/: utils.hpp
scripts/: download_ntoskrnl.py  find_missing.py  generate_gadgets.py  get_count.py  scrape_winbindex.py  search_gadgets.py
src/: globals.cpp  main.cpp
src/driver/: arbitrary_call.cpp  kernel_addresses.cpp  primitives.cpp
src/rop_thread/: memory_manager.cpp  rop_thread.cpp  stack_manager.cpp
src/stack/: stack_manager.cpp
src/utils/: utils.cpp
